<resources>
    <string name="app_name">CareerShala</string>
    <string name="create_new_account">Create New Account?</string>
    <string name="login">Login</string>
    <string name="remember_me">Remember Me</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="sign_in">SIGN IN</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password1">Enter your Password</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="reg">register</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="input_error_name">name required</string>
    <string name="input_error_email">email required</string>
    <string name="input_error_password">password required</string>
    <string name="input_error_phone">phone required</string>
    <string name="input_error_password_length">password should be atleast 6 characters long</string>
    <string name="input_error_phone_invalid">enter a valid phone number</string>
    <string name="registration_success">Registered Successfully</string>
    <string name="input_error_email_invalid">enter a valid email</string>
    <color name="dot_inactive_screen1">#ffa000</color>
    <color name="dot_inactive_screen2">#008c57</color>
    <color name="dot_inactive_screen3">#0e1e49</color>
    <color name="dot_inactive_screen4">#0e1e49</color>
    <!-- dots active colors -->
    <color name="dot_active_screen1">#f9c772</color>
    <color name="dot_active_screen2">#74f7c5</color>
    <color name="dot_active_screen3">#3a67e0</color>
    <color name="dot_active_screen4">#3a67e0</color>
    <array name="array_dot_active">
        <item>@color/dot_active_screen1</item>
        <item>@color/dot_active_screen2</item>
        <item>@color/dot_active_screen3</item>
        <item>@color/dot_active_screen4</item>
    </array>
    <array name="array_dot_inactive">
        <item>@color/dot_inactive_screen1</item>
        <item>@color/dot_inactive_screen2</item>
        <item>@color/dot_inactive_screen3</item>
        <item>@color/dot_inactive_screen4</item>
    </array>
    <string name="title_activity_bottom">Bottom</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="career_guide">Career Guide</string>
</resources>
