<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <LinearLayout
        android:id="@+id/lin_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:visibility="visible">

        <android.support.v7.widget.CardView
            android:id="@+id/cv_one_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="46dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="46dp"
            android:layout_marginBottom="20dp"
            android:elevation="10dp"
            card_view:cardBackgroundColor="#fffcfcfc"
            card_view:cardCornerRadius="10dp"
            card_view:cardElevation="10dp"
            card_view:cardPreventCornerOverlap="false"
            card_view:cardUseCompatPadding="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:text="@string/sign_in"
                    android:textSize="30.0sp" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textemail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp">

                    <EditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_perm_identity_black_24dp"
                        android:drawablePadding="12dp"
                        android:hint="@string/enter_your_name"
                        android:inputType="text"
                        android:textColor="#ff000000"
                        android:textColorHint="#ff606060"
                        android:textSize="15sp" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textpass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    card_view:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/pass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_lock_black_24dp"
                        android:drawablePadding="12dp"
                        android:hint="@string/enter_your_password"
                        android:inputType="textPassword"
                        android:textColor="#ff000000"
                        android:textColorHint="#ff606060"
                        android:textSize="15sp" />
                </android.support.design.widget.TextInputLayout>

                <CheckBox
                    android:id="@+id/checkbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="35dp"
                    android:text="@string/remember_me"
                    android:textColor="#ff000000"
                    android:textSize="15sp" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/lin_card"
        android:layout_alignParentStart="true"
        android:layout_marginStart="80dp"
        android:gravity="center">

        <Button
            android:id="@+id/go"
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:background="@drawable/button_back"
            android:text="@string/login"
            android:textColor="#ffffffff"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignBottom="@id/bt"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="-101dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/gl"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:layout_marginStart="70dp"
            android:src="@drawable/google" />

        <ImageView
            android:id="@+id/fb"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:layout_marginStart="30dp"
            android:src="@drawable/facebook" />

        <ImageView
            android:id="@+id/tw"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:layout_marginStart="30dp"
            android:src="@drawable/twitter" />
    </LinearLayout>

    <TextView
        android:id="@+id/altext1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="98dp"
        android:layout_marginBottom="48dp"
        android:text="@string/create_new_account"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="20sp"
        android:textStyle="bold" />
</RelativeLayout>