<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <LinearLayout
        android:id="@+id/lin_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:visibility="visible">

        <android.support.v7.widget.CardView
            android:id="@+id/cv_one_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:elevation="10dp"
            card_view:cardBackgroundColor="#fffcfcfc"
            card_view:cardCornerRadius="10dp"
            card_view:cardElevation="10dp"
            card_view:cardPreventCornerOverlap="false"
            card_view:cardUseCompatPadding="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="12dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:text="SIGN UP"
                    android:textSize="30sp" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp">

                    <EditText
                        android:id="@+id/editname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_perm_identity_black_24dp"
                        android:drawablePadding="15dp"
                        android:hint="@string/enter_your_name"
                        android:inputType="text"
                        android:textColor="#ff000000"
                        android:textColorHint="#ff606060"
                        android:textSize="15sp" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textemail1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp">

                    <EditText
                        android:id="@+id/name1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_email_black_24dp"
                        android:drawablePadding="15dp"
                        android:hint="@string/enter_your_email"
                        android:inputType="textEmailAddress"
                        android:textColor="#ff000000"
                        android:textColorHint="#ff606060"
                        android:textSize="15sp" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textpass1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp">

                    <EditText
                        android:id="@+id/pass1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_lock_black_24dp"
                        android:drawablePadding="15dp"
                        android:hint="@string/enter_your_password"
                        android:inputType="textPassword"
                        android:textColor="#ff000000"
                        android:textColorHint="#ff606060"
                        android:textSize="15sp" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textphone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp">

                    <EditText
                        android:id="@+id/editno"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="35dp"
                        android:drawableLeft="@drawable/ic_call_black_24dp"
                        android:drawablePadding="15dp"
                        android:hint="@string/enter_your_mobile_number"
                        android:inputType="number"
                        android:textColor="#ff000000"
                        android:textColorHint="#ff606060"
                        android:textSize="15sp" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:id="@id/bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/lin_card"
        android:layout_alignParentStart="true"
        android:layout_marginStart="80dp"
        android:gravity="center">

        <Button
            android:id="@+id/reg"
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:background="@drawable/button_back"
            android:text="@string/reg"
            android:textColor="#ffffffff"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignBottom="@+id/bt"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="-84dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/gl"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:layout_marginStart="70dp"
            android:src="@drawable/google" />

        <ImageView
            android:id="@+id/fb"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:layout_marginStart="30dp"
            android:src="@drawable/facebook" />

        <ImageView
            android:id="@+id/tw"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:layout_marginStart="30dp"
            android:src="@drawable/twitter" />
    </LinearLayout>

    <TextView
        android:id="@+id/altext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="27dp"
        android:text="@string/already_have_an_account"
        android:textSize="23sp"
        android:textStyle="bold" />
</RelativeLayout>